@@ -18,7 +18,7 @@ import EditorSelection from './Selection';
 
 interface BookmarkManager {
   getBookmark (type: number, normalized?: boolean): Bookmark;
-  moveToBookmark (bookmark: Bookmark): boolean;
+  moveToBookmark (bookmark: Bookmark): void;
 }
 
 /**
@@ -47,14 +47,13 @@ const BookmarkManager = (selection: EditorSelection): BookmarkManager => {
      * // Restore the selection bookmark
      * tinymce.activeEditor.selection.moveToBookmark(bm);
      */
-    getBookmark: Fun.curry(Bookmarks.getBookmark, selection) as (type: number, normalized?: boolean) => Bookmark,
+    getBookmark: Fun.curry(Bookmarks.getBookmark, selection),
 
     /**
      * Restores the selection to the specified bookmark.
      *
      * @method moveToBookmark
      * @param {Object} bookmark Bookmark to restore selection from.
-     * @return {Boolean} true/false if it was successful or not.
      * @example
      * // Stores a bookmark of the current selection
      * var bm = tinymce.activeEditor.selection.getBookmark();
@@ -64,7 +63,7 @@ const BookmarkManager = (selection: EditorSelection): BookmarkManager => {
      * // Restore the selection bookmark
      * tinymce.activeEditor.selection.moveToBookmark(bm);
      */
-    moveToBookmark: Fun.curry(Bookmarks.moveToBookmark, selection) as (bookmark: Bookmark) => boolean
+    moveToBookmark: Fun.curry(Bookmarks.moveToBookmark, selection)
   };
 };
 
@@ -76,6 +75,6 @@ const BookmarkManager = (selection: EditorSelection): BookmarkManager => {
  * @param {DOMNode} node DOM Node to check if it's a bookmark node or not.
  * @return {Boolean} true/false if the node is a bookmark node or not.
  */
-BookmarkManager.isBookmarkNode = Bookmarks.isBookmarkNode as (node: Node) => boolean;
+BookmarkManager.isBookmarkNode = Bookmarks.isBookmarkNode;
 
 export default BookmarkManager;
