@@ -12,6 +12,7 @@ Version 5.7.0 (TBD)
     Fixed an issue where `scope` attributes on table cells would not change as expected when merging or unmerging cells #TINY-6486
     Fixed the plugin documentation links in the `help` plugin #DOC-703
     Fixed an issue with external styles bleeding into TinyMCE #TINY-6735
+    Fixed incorrect return types on `editor.selection.moveToBookmark` #TINY-6504
 Version 5.6.2 (2020-12-08)
     Fixed a UI rendering regression when the document body is using `display: flex` #TINY-6783
 Version 5.6.1 (2020-11-25)
